--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -1,110 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:background="@color/lightGray"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <data>
+
+    </data>
+
+    <ScrollView
+        android:id="@+id/helpFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="24dp"
-        tools:context=".fragments.help.HelpFragment">
+        android:layout_height="match_parent"
+        android:background="@color/lightGray">
 
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/katibeh"
-            android:layoutDirection="rtl"
-            android:text="نوع الطلب "
-            android:textColor="@color/purple_500"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.110000014" />
-
-        <RadioGroup
-            android:id="@+id/request_type"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginTop="8dp"
-            android:button="@null"
-            android:gravity="end"
-            android:orientation="vertical"
-            android:paddingStart="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:layout_constraintVertical_bias="0.0">
+            android:padding="24dp"
+            tools:context=".fragments.help.HelpFragment">
 
-            <RadioButton
-                android:id="@+id/civil_defense_btn"
-                android:layout_width="match_parent"
+
+            <TextView
+                android:id="@+id/order_type_tv"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="start"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/katibeh"
                 android:layoutDirection="rtl"
-                android:textSize="20sp"
-                android:text="@string/civil_defense"
-                android:textAlignment="textStart" />
+                android:text="نوع الطلب "
+                android:textColor="@color/purple_500"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.110000014" />
 
-            <RadioButton
-                android:id="@+id/ambulance_btn"
+            <RadioGroup
+                android:id="@+id/request_type_rg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="start"
+                android:layout_gravity="end"
+                android:layout_marginTop="8dp"
+                android:button="@null"
+                android:gravity="end"
+                android:orientation="vertical"
+                android:paddingStart="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/order_type_tv"
+                app:layout_constraintVertical_bias="0.0">
+
+                <RadioButton
+                    android:id="@+id/civil_defense_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:fontFamily="@font/katibeh"
+                    android:layoutDirection="rtl"
+                    android:text="@string/civil_defense"
+                    android:textAlignment="textStart"
+                    android:textSize="20sp" />
+
+                <RadioButton
+                    android:id="@+id/ambulance_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:fontFamily="@font/katibeh"
+                    android:layoutDirection="rtl"
+                    android:text="@string/ambulance"
+                    android:textAlignment="textStart"
+                    android:textSize="20sp" />
+            </RadioGroup>
+
+            <EditText
+                android:id="@+id/request_description_et"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_input_request"
+                android:ems="10"
                 android:fontFamily="@font/katibeh"
-                android:layoutDirection="rtl"
-                android:text="@string/ambulance"
-                android:textSize="20sp"
-                android:textAlignment="textStart" />
-        </RadioGroup>
+                android:gravity="start|top"
+                android:hint="@string/request_description"
+                android:inputType="textMultiLine"
+                android:paddingStart="24dp"
+                android:paddingTop="16dp"
+                android:paddingEnd="24dp"
+                android:textColorHint="@color/purple_200"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/request_type_rg" />
 
-        <EditText
-            android:id="@+id/request_description_et"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/custom_input_request"
-            android:ems="10"
-            android:fontFamily="@font/katibeh"
-            android:gravity="start|top"
-            android:hint="@string/request_description"
-            android:inputType="textMultiLine"
-            android:paddingStart="24dp"
-            android:paddingTop="16dp"
-            android:paddingEnd="24dp"
-            android:textColorHint="@color/purple_200"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/request_type" />
-
-        <Button
-            android:id="@+id/order_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="24dp"
-            android:fontFamily="@font/katibeh"
-            android:paddingHorizontal="50dp"
-            android:text="اطلب"
-            android:textSize="28sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/request_description_et"
-            app:layout_constraintVertical_bias="0.22000003" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+            <Button
+                android:id="@+id/order_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="24dp"
+                android:fontFamily="@font/katibeh"
+                android:paddingHorizontal="50dp"
+                android:text="اطلب"
+                android:textSize="28sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/request_description_et"
+                app:layout_constraintVertical_bias="0.22000003" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+</layout>
