--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,10 +8,10 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/loginFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/lightGray"
-
         tools:context=".fragments.login.LoginFragment">
 
 
