--- a/app/src/main/res/layout/fragment_medical_history.xml
+++ b/app/src/main/res/layout/fragment_medical_history.xml
@@ -25,7 +25,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/katibeh"
-                android:text="الحالة الصحية"
+                android:text="@string/medical_status"
                 android:textColor="@color/purple_700"
                 android:textSize="22sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -141,7 +141,7 @@
                 android:background="@drawable/custom_input"
                 android:ems="10"
                 android:fontFamily="@font/katibeh"
-                android:hint="الطول"
+                android:hint="@string/height"
                 android:inputType="number"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
@@ -156,7 +156,7 @@
                 android:background="@drawable/custom_input"
                 android:ems="10"
                 android:fontFamily="@font/katibeh"
-                android:hint="الوزن"
+                android:hint="@string/weight"
                 android:inputType="number"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
@@ -187,8 +187,8 @@
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="24dp"
                 android:fontFamily="@font/katibeh"
-                android:text="حفظ"
-                android:textSize="24dp"
+                android:text="@string/save"
+                android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
